--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
           <a href="https://www.facebook.com/Hannslander" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/hanns_landers/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://web.skype.com/" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="https://drive.google.com/file/d/12m1oHKfab6dsfLmIyVpxZuy-xOiE-vXw/view?usp=sharing" class='fas'>&#xf46d;</i></a>
         </div>
       </div>
 
@@ -65,6 +66,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
+      <img src="assets/img/logo.png" alt="" class="img-fluid rounded-circle" style=" animation: breathe 7s linear infinite;">
       <h1> Rodriguez Hanns</h1>
       <p>I'm a <span class="typed" data-typed-items="Designer, Developer, Freelancer, Student"></span></p>
     </div>
@@ -390,9 +392,13 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy;  <strong><span></span></strong>
       </div>
       <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        Designed by <a href="https://bootstrapmade.com/"></a>
       </div>
     </div>
   </footer><!-- End  Footer -->
